--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="https://static.thenounproject.com/png/3085633-200.png"
+      href="https://cdn.iconscout.com/icon/premium/png-512-thumb/community-83-904765.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
